<resources>
    <string name="app_name">Status Share</string>
    <string name="mainWelcomeHeading">Welcome</string>
    <string name="mainEnterButton">Enter</string>
    <string name="loginHeading">Login</string>
    <string name="loginLoginButton">Log in</string>
    <string name="loginRegisterButton">Register</string>
    <string name="registrationHeading">Registration</string>
    <string name="registrationRegisterButton">Register</string>
    <string name="registrationCancelButton">Cancel</string>
    <string name="loginEmail">Email address</string>
    <string name="loginPassword">Password</string>
    <string name="registrationFirstName">First name</string>
    <string name="registrationLastName">Last name</string>
    <string name="registrationEmail">Email address</string>
    <string name="registrationPassword">Password</string>
    <string name="registrationConfirmPassword">Confirm password</string>
    <string name="profileHeading">Profile</string>
    <string name="profileStatus">Status</string>
    <string name="profileProfileImageContentDescription">Profile picture</string>
    <string name="profileAvailabilityColor">Availability color</string>
    <string name="profileUpdateProfileButton">Update profile</string>
    <string name="profileLocationHeading">Location</string>
    <string name="profileDestinationHeading">Destination</string>
    <string name="profileEventsHeading">Events</string>
    <string name="editProfileHeading">Update Profile</string>
    <string name="editProfileStatus">Status</string>
    <string name="editProfileLocation">Location</string>
    <string name="editProfileLiveSwitch">Live</string>
    <string name="editProfileDestination">Destination</string>
    <string name="editProfileAvailabilityColorButtonContentDescription">Availability color</string>
    <string name="editProfileSaveButton">Save</string>
    <string name="editProfileCancelButton">Cancel</string>
    <string name="editProfileProfileImageButtonContentDescription">Profile image</string>
    <string name="editProfileEventsHeading">Events</string>
    <string name="editProfilePlusButton">+</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_share">Share</string>
    <string name="nav_add_friend">AddFriend</string>
    <string name="nav_location">Share Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_settings">settings</string>
    <string name="Setting_nav">Settings</string>
    <string name="notify_nav">Notify</string>
    <string name="Contacts_nav">Contacts</string>
    <string name="My_profile_nav">My Profile</string>
    <string name="home_page">Home PAge</string>
    <string name="contact_activty">Contact Page</string>
    <string name="notification_activty">Notification</string>

    <string name="sharedProfileHeading">Profile</string>
    <string name="sharedProfileProfileImageContentDescription">Profile image</string>
    <string name="sharedProfileAvailabilityColorContentDescription">Availability color</string>
    <string name="sharedProfileStatus">Status</string>
    <string name="sharedProfileLocationHeading">Location</string>
    <string name="sharedProfileDestinationHeading">Destination</string>
    <string name="sharedProfileEventsHeading">Events</string>
    <string name="settingsHeading">Settings</string>
    <string name="settingsLogoutButton">Log out</string>
    <string name="notifyHeading">Scheduled Notifications</string>
    <string name="notifyCreateButton">Create</string>
    <string name="homeHeading">Home</string>
    <string name="contactsHeading">Contacts</string>
    <string name="contactsFamilyHeading">Family</string>
    <string name="contactsFamilyAddButton">+</string>
    <string name="contactsFriendsHeading">Friends</string>
    <string name="contactsFriendsAddButton">+</string>
    <string name="contactsTeamHeading">Team</string>
    <string name="contactsTeamAddButton">+</string>
    <string name="createNotificationHeading">Create Notification</string>
    <string name="createNotificationMessage">Message</string>
    <string name="createNotificationDate">Date</string>
    <string name="createNotificationDailySwitch">Daily</string>
    <string name="createNotificationCreateButton">Create</string>
    <string name="createNotificationCancelButton">Cancel</string>
    <string name="createNotificationTitle">Title</string>
    <string name="createNotificationLocation">Location</string>
    <string name="createNotificationDestination">Destination</string>
    <string name="createNotificationTime">Time</string>
    <string name="editNotificationHeading">Edit Notification</string>
    <string name="editNotificationMessage">Message</string>
    <string name="editNotificationLocation">Location</string>
    <string name="editNotificationDestination">Destination</string>
    <string name="editNotificationDate">Date</string>
    <string name="editNotificationDaily">Daily</string>
    <string name="editNotificationTime">Time</string>
    <string name="editNotificationSaveButton">Save</string>
    <string name="editNotificationCancelButton">Cancel</string>
    <string name="editNotificationTitle">Title</string>
    <string name="addContactHeading">Add Contact</string>
    <string name="addContactEmail">Email address</string>
    <string name="addContactRequestButton">Request</string>
    <string name="addContactCancelButton">Cancel</string>
    <string name="addEventHeading">Add Event</string>
    <string name="addEventTitle">Title</string>
    <string name="addEventDescription">Description</string>
    <string name="addEventAddress">Address</string>
    <string name="addEventDate">Date</string>
    <string name="addEventTime">Time</string>
    <string name="addEventAddButton">Add</string>
    <string name="addEventCancelButton">Cancel</string>
    <string name="editEventHeading">Edit Event</string>
    <string name="editEventTitle">Title</string>
    <string name="editEventDescription">Description</string>
    <string name="editEventAddress">Address</string>
    <string name="editEventDate">Date</string>
    <string name="editEventTime">Time</string>
    <string name="editEventSaveButton">Save</string>
    <string name="editEventCancelButton">Cancel</string>

    <string name="notificationsHeading">Notify</string>
    <string name="notificationsCreateButton">+</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">user name</string>
    <string name="user_status">user status</string>
    <string name="my_email_address">My Email Address</string>
    <string name="email_holder">email</string>
    <string name="EmailHint">Enter Email</string>
    <string name="no_data_available">nothing</string>
    <string name="event_name">Event Name</string>
    <string name="event_address">Event Address</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_description">Event Description</string>

    <string name="dialog_new_entry_title">New Event</string>
    <string name="dialog_edit_entry_title">Edit Event</string>
    <string name="contactsContactName">Name</string>
    <string name="contactsContactStatus">Status</string>
    <string name="pending_friend_request">Pending Friend Request</string>
    <string name="add">Add</string>
    <string name="profile_image">Profile Image</string>

</resources>
