<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/Setting_nav" android:icon="@drawable/nav_bar_settings"
          android:id="@+id/nav_setting_button"/>
    <item android:title="@string/notify_nav" android:icon="@drawable/nav_bar_notify"
          android:id="@+id/nav_notification_button"/>
    <item android:title="@string/nav_home" android:icon="@drawable/nav_bar_home"
          android:id="@+id/nav_home_button"/>
    <item android:title="@string/Contacts_nav" android:icon="@drawable/nav_bar_contacts_trimmed"
          android:id="@+id/nav_contact_button"/>
    <item android:title="@string/My_profile_nav" android:icon="@drawable/nav_bar_profile"
          android:id="@+id/nav_profile"/>

</menu>