<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateNotificationActivity" android:id="@+id/createNotificationConstraintLayout">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/createNotificationLinearLayout"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:text="@string/createNotificationHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/createNotificationHeading" android:textSize="36sp"
                android:textAlignment="center"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:ems="10"
                android:id="@+id/createNotificationTitle" android:hint="@string/createNotificationTitle" android:layout_marginTop="40dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/createNotificationMessage" android:hint="@string/createNotificationMessage"
                android:singleLine="false" android:inputType="textMultiLine" android:layout_marginTop="20dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/createNotificationLocation" android:hint="@string/createNotificationLocation" android:layout_marginTop="20dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/createNotificationDestination" android:hint="@string/createNotificationDestination"
                android:layout_marginTop="20dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/createNotificationDateLinearLayout">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/createNotificationDate" android:hint="@string/createNotificationDate" android:layout_marginStart="0dp"
                    android:layout_marginTop="20dp"/>
            <Switch
                    android:text="@string/createNotificationDailySwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/createNotificationDailySwitch"
                    android:layout_marginStart="50dp" android:layout_marginEnd="69dp"
                    android:textAlignment="center" android:layout_weight="1" android:layout_marginTop="20dp"/>
        </LinearLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/createNotificationTime" android:hint="@string/createNotificationTime" android:layout_marginTop="20dp"/>
        <Button
                android:text="@string/createNotificationCreateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/createNotificationCreateButton"
                android:layout_gravity="center_horizontal" android:layout_marginTop="20dp"/>
        <Button
                android:text="@string/createNotificationCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/createNotificationCancelButton"
                android:layout_gravity="center_horizontal" android:layout_marginTop="20dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>