<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SharedProfileActivity" android:id="@+id/sharedProfileConstraintLayout">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/sharedProfileScrollView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:fillViewport="true">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sharedProfileRelativeLayout">

            <TextView
                    android:text="@string/sharedProfileHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/sharedProfileHeading"
                    android:textAlignment="center" android:textSize="36sp"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars[0]"
                    android:id="@+id/sharedProfileProfileImage" android:layout_marginTop="40dp"
                    android:layout_below="@+id/sharedProfileHeading" android:layout_alignParentStart="true"
                    android:layout_marginStart="142dp"
                    android:contentDescription="@string/sharedProfileProfileImageContentDescription"/>
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp" app:srcCompat="@android:drawable/presence_online"
                    android:id="@+id/sharedProfileAvailabilityColor" android:layout_marginTop="80dp"
                    android:layout_below="@+id/sharedProfileHeading"
                    android:layout_toEndOf="@+id/sharedProfileProfileImage" android:layout_marginStart="50dp"
                    android:contentDescription="@string/sharedProfileAvailabilityColorContentDescription"/>
            <TextView
                    android:text="@string/sharedProfileStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/sharedProfileStatus"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/sharedProfileProfileImage"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/sharedProfileLocationHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/sharedProfileLocationHeading"
                    android:layout_marginTop="40dp"
                    android:layout_below="@+id/sharedProfileStatus" android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp" android:layout_alignParentEnd="true"
                    android:layout_marginEnd="271dp" android:textSize="18sp"/>
            <TextView
                    android:text="@string/sharedProfileDestinationHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/sharedProfileDestinationHeading" android:layout_marginTop="198dp"
                    android:layout_below="@+id/sharedProfileLocationHeading" android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp" android:layout_alignParentEnd="true"
                    android:layout_marginEnd="271dp" android:textSize="18sp"/>
            <TextView
                    android:text="@string/sharedProfileEventsHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/sharedProfileEventsHeading"
                    android:layout_marginTop="200dp"
                    android:layout_below="@+id/sharedProfileDestinationHeading" android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp" android:textSize="18sp" android:layout_marginEnd="275dp"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>